# MarkDown-Tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: SPEC.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  preview.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutModal.tsx  CommandPalette.tsx  Editor.tsx  ExportDialog.tsx  HelpModal.tsx  LanguagePicker.tsx  PreviewPane.tsx  PreviewWindowApp.tsx  Sidebar.tsx  SmartGutter.tsx  StatusBar.tsx  TabBar.tsx  Toolbar.tsx
src/components/panels/: FilesPanel.tsx  SettingsPanel.tsx  SnippetStudioPanel.tsx  SnippetsPanel.tsx  TimelinePanel.tsx  TopologyPanel.tsx
src/lib/: editorCommands.ts  editorThemes.ts  languages.ts  outline.ts  palette.ts  preview.ts  scrollSync.ts  snippets.ts  tabs.ts  theme.ts  timeline.ts
